Fixed webkit bug that was flickering fixed top bar

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -39,6 +39,7 @@
 
 #site-header {
 	@extend .fixed;
+	-webkit-backface-visibility: hidden;
 
 	.top-bar {
 		@include transition-property(max-height);
